<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/roundedCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/employee_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/blank_photo" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        style="@style/Header"
                        android:text="@string/name"
                        android:textSize="16sp" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/employee_designation"
                            android:layout_width="match_parent"
                            style="@style/Header_2"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/manager"
                            android:textSize="15sp" />
                        <TextView
                            android:id="@+id/employee_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:text="@string/age_42"
                            android:textSize="15sp" />



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/empl_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minLines="1"
                            android:text="@string/phone_1_s"
                            android:textSize="13sp" />
                        <TextView
                            android:id="@+id/employee_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:text="@string/gender_"
                            android:textSize="13sp" />








                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>




        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>